added index.html back

--- a/clientdemo/index.html
+++ b/clientdemo/index.html
@@ -12,9 +12,14 @@
 </head>
 <body>
 <h1>Aquaponics Dashboard Prototype</h1>
+<h2>Temperature</h2>
 <img src="last2hours.png">
 <img src="last24hours.png">
 <img src="lastweek.png">
+<h2>Water Depth</h2>
+<img src="depthlast2hours.png">
+<img src="depthlast24hours.png">
+<img src="depthlastweek.png">
 
 </body>
 </html>
