--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <title>Creative Protocol</title>
-    </head>
-    
-    <body>
-        <!-- Modified version of https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
-        <section class="nav-bar">
-            <nav>
-                <ul class="nav-options">
-                    <li><a href="index.html">Home</a></li>
-                    <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">About Us
-                                <i class="fa fa-caret-down"></i>
-                            </button>
-                            <div class="dropdown-content">
-                                <a href="pages/profile/team-prof.html">Team Profile</a>
-                                <a href="pages/profile/indv-prof.html">Our Profiles</a>
-                                <a href="pages/profile/jobs.html">Our Ideal Jobs</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li><a href="pages/group-reflection.html">Group Reflection</a></li>
-                    <li class="nav-right"><a href="pages/proj-idea.html">Project Idea</a></li>
-                </ul>
-            </nav>
-        </section>
-        <!-- End of modified code -->
-        <main class="home-title">
-            <img src="img/creative_protocol3.png"> <!-- Thanks for the logo Matt! -->
-            <h2>"Creativity Is Our Protocol"</h2>
-            <h3>For Introduction to Information Technology</h3>
-            <h3>COSC2196</h3>
-        </main>
-        <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Creative Protocol - Home</title>
+  </head>
+  <body>
+    <section class="nav-bar">
+      <nav>
+        <ul class="nav-options">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pages/TeamProfile.html">Team Profile</a></li>
+          <li><a href="">Tools and Technologies</a></li>
+          <li><a href="">Skills and Jobs</a></li>
+          <li><a href="">Group Reflection</a></li>
+          <li class="nav-right">
+            <div class="dropdown">
+              <button class="dropbtn">Project Items</button>
+              <div class="dropdown-content">
+                <a href="">Project Description</a>
+                <a href="">Project Dashboard</a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </section>
+    <main class="home-title">
+      <img src="img/creative_protocol3.png"> <!-- Thanks for the logo Matt! -->
+      <h2>"Creativity Is Our Protocol"</h2>
+      <h3>For Introduction to Information Technology</h3>
+      <h3>COSC2196</h3>
+    </main>
+    <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
+  </body>
 </html>
-
-<!-- Sources:
-    https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp
