--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -253,7 +253,27 @@
           </ol>
         </p>
       </div>
+      <div class="box">
+        <h3>Compare and contrast the career plans, including ideal jobs, for each person in the group. What common elements are there, if any? What differentiates each position from the others, if anything? How similar or different are your career plans across the group?</h3>
+        <p>For each of the ideal jobs chosen by the group, a good foundation is a Bachelor’s Degree in Information Technology as well as obtaining entry level experience in their chosen fields. Although all the ideal jobs start with a Bachelor’s Degree, each one would branch out into their own specific field and specialize in the skills they require for their ideal job. It is also often recommended that an internship be done in the chosen field, this allows for some hands on training as well as being a good opportunity to network which could lead to job offers and also give you good contacts in the IT industry. Another similarity, throughout the IT industry is that anyone in this industry are often expected to keep on top of the latest digital trends, and they should also know how said trends will impact their particular field. </p>
+        <br />
+        <h3>How did your group work together in Assignment 2? Will you be introducing any changes in process for Assignment 3?</h3>
+        <p>Based on the group reflection from Assignment 2, although there was a bit of a rocky start, as the group was spread across different tools, once a single collaboration platform was agreed upon things became a lot more smooth. It was found communication was best over Microsoft Teams while collaborating our work using Microsoft OneNote and Office365 worked well for the team and allowed us to work well to complete what needed to be done on the assignment. 
+        <br />
+        <br />
+        Everybody’s roles in the team was agreed on early, so each member was able to focus on their tasks and keep the team updated on their progress. Regular meetings were also held and minutes were made in the meetings which could be referred back to in subsequent meetings, which allowed group members to stay focused and updated. The minutes also allowed members who may have missed the meeting to stay informed.  
+        <br />
+        <br />
+        In the beginning phases of the assignment, there was some lack in communication, this was due to various reasons, including location and work commitments. Once communication methods were improved the team worked well together to meet the deadlines.  
+        <br />
+        <br />
+        We learned that in an online environment, where members have different commitments and schedules, it is of upmost importance that they communicate effectively. It is also vital that each member knows their role and what is expected from them so that deadlines are met or exceeded. 
+        <br />
+        <br />
+        We thus feel that we have found a formula which works well for our team and we will continue to use this formula going forward in our assignments.</p>
+      </div>
     </main>
+    <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
     <script>
       function OpenStudent(evt, cityName) {
         var i, tabcontent, tablinks;
