--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -9,8 +9,8 @@
       <nav>
         <ul class="nav-options">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="">Team Profile</a></li>
-          <li><a href="">Tools and Technologies</a></li>
+          <li><a href="TeamProfile.html">Team Profile</a></li>
+          <li><a href="Tools-Tech.html">Tools and Technologies</a></li>
           <li><a href="">Skills and Jobs</a></li>
           <li><a href="">Group Reflection</a></li>
           <li class="nav-right">
