--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="pages/TeamProfile.html">Team Profile</a></li>
           <li><a href="pages/Tools-Tech.html">Tools and Technologies</a></li>
-          <li><a href="">Skills and Jobs</a></li>
+          <li><a href="pages/SkillsJobs.html">Skills and Jobs</a></li>
           <li><a href="">Group Reflection</a></li>
           <li class="nav-right">
             <div class="dropdown">
