--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="dropdown">
               <button class="dropbtn">Project Items</button>
               <div class="dropdown-content">
-                <a href="">Project Description</a>
+                <a href="pages/ProjectDescription.html">Project Description</a>
                 <a href="">Project Dashboard</a>
               </div>
             </div>
