--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -65,11 +65,19 @@
         <br />
         <h3>Career Plans</h3>
         <p>
-          <b><!-- Job Title Goes Here --></b>
-          <!-- Job Description Goes Here -->
+          <b>Samuel Ashton - Chief Technical Officer </b>
+          <br />
+          A Chief Technical Officer’s primary responsibility is to understand and implement technologies that help a business achieve its goals and objectives. Depending on the size of the organization. Typical Steps to Becoming a Chief Technical Officer are :  
           <ol>
-            <li></li>
+            <li>Earn a Bachelor’s Degree. Nearly all Chief Technical Officers start their professional journeys by earning a bachelor’s degree in a computer science-related field. With the knowledge of database design, digital forensics, cyber law, programming, and data integrity, graduates can move on to work in a variety of IT professions.  </li>
             <br />
+            <li>Aspiring Chief Technical Officers must build a strong educational base and gain experience in entry-level positions before taking the next step toward becoming a Chief Technical Officer. This type of experience can be gained by doing an internship and getting hands on experience in a number of IT areas.  </li>
+            <br />
+            <li>On-the-Job Experience is vital in this position as new problems lead to new IT specialties and roles, the Chief Technical Officer’s job becomes more complex. Organizations depend on their CTOs to have the experience to understand these complexities and to ensure that the right people are in place to address any concerns. CTOs gain this experience and understanding by working in a number of IT areas, such as Network architecture, Big data engineering, Information security management, Security engineering and Web software development. </li>
+            <br />
+            <li>Positions in the above areas may require only a few years of experience, but professionals need to have between five and 10 years of experience, total, before applying to a manager or director role. Once in a managerial position, an IT manager who wants to work as a CTO must spend an additional five to seven years honing his or her leadership and business skills. So typically a professional must work in the IT field for at least 15 years before seeking employment as a CTO.  </li>
+            <br />
+            <li>After spending some time working in the technology field, IT professionals with the ultimate goal of becoming a CTO should consider pursuing a master’s degree. A CTO needs to have the technological expertise and a keen business sense to be successful in a leadership role.  </li>
           </ol>
         </p>
       </div>
