--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -61,7 +61,7 @@
         Team: Creative Protocol 
         <br />
         <br />
-        <!-- Insert Introduction Here, see William's tab for an example --></p>
+        <p>I am a Brisbane based IT professional, working in the industry for the last 17 years. Having been interested in IT from an early age I have interacted with technology from the late 80's Starting with an MSX2 microcomputer, watching computing evolve through generations of advancement to today's world of cloud computing and online mobile devices in everyone's pockets. Throughout my career I have performed roles in IT support, System Administration, Network Engineering and IT Management. When not in front of a computer, I enjoy fishing with my two children, Japanese sports cars and collecting Phantom comics, even if I don’t get time to read them all! </p>
         <br />
         <h3>Career Plans</h3>
         <p>
