--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -104,15 +104,24 @@
         Team: Creative Protocol 
         <br />
         <br />
-        <!-- Insert Introduction Here, see William's tab for an example --></p>
+        <p>I am a 27 year old, Melbourne born Libra with my general interests being fitness, cars (Subaru all the way), computers, gaming, animation and security. Straight out of year 12 I went on to complete my certificate 4 in fitness and begin the journey into personal training. It was a weird time for PTs back then and from there I continued to upskill where possible and work on the side where ever I could. I obtained my pre app in electrical, but was unable to land a job due to being of mature age, basically it cost more to hire me. I also attended university for Game Art and Animation, but financially living expenses where too much at the time, so I had to leave and gain full time employment. Moving forwards, this instead led me to many physical related jobs. This brings us to where I am now, I am on the hunt to pursue my hobbies and turn them into a career in something I am able to commit to long term, as my body has begun to give me signs that it's time to take it back a notch. When I was in year 10, about 15 years old, my parents took my brother and I out of school for a year and we travelled around Australia (Tasmania inc) and also the South island of New Zealand. It was a life changing experience that looking back on wasn’t as bad as 15 year old me made it out to be. </p>
         <br />
         <h3>Career Plans</h3>
         <p>
-          <b><!-- Job Title Goes Here --></b>
-          <!-- Job Description Goes Here -->
+          <b>Shane Bunting - Senior Incident Responder </b>
+         Incident responders seek to protect and improve organizational security by preventing, averting, and mitigating security threats. Prevention duties include system monitoring, assessment, testing, and analysis designed to identify and correct potential security breaches. Incident responders often create security plans, policies, protocols, and training that prepare organizations to respond efficiently and effectively to incidents. Steps to become an incident responder : 
           <ol>
-            <li></li>
+            <li>    Bachelor's or master's degrees in computer forensics, cybersecurity, or a related field often provide ideal educational preparation for incident responders careers. For those seeking a career transition, earning your master's degree in information security or incident response management can position you well for eventually getting upper-level roles such as senior incident responder, senior intrusion analyst, or CSIRT manager. </li>
             <br />
+            <li>     Many professionals in this skills-based field gain their cybersecurity education simply by earning relevant professional certifications such as certified incident handler, certified intrusion analyst, or certified forensic analyst. Regardless of the degree requirements, most incident responder jobs require some certifications. Keep in mind that certification requirements vary depending on position, employer, and industry. </li>
+            <br />
+            <li>     Someone who wants to become a Senior Incident Responder can benefit from doing an internship, giving them some practical experience in their chosen field and also allowing them to network within the forensic and cybersecurity fields. </li>
+            <br />
+            <li>     Most incident responder jobs require at least 2-3 years of prior relevant work experience in fields like computer forensics, cybersecurity, or network administration.   </li>
+            <br />
+            <li>     Incident responders need considerable applied knowledge and skills working with many kinds of systems. Comprehensive understanding of operating systems, hardware and software systems, and network systems are essential. Related hard skills include system monitoring tools, forensics software, and e-discovery tools. Incident responders also must understand programming languages to do the work often needed to address cybersecurity threats. </li>
+            <br />
+            <li>     Cybersecurity degree programs cultivate skills through coursework in operating systems and information systems security, cybercrime forensics, and object-oriented programming. Aspiring incident responders interested in leadership positions benefit from courses on cybersecurity operations management, cybersecurity law and policy, and global trends. Other relevant courses include cyberwarfare and ethical hacking. </li>
           </ol>
         </p>
       </div>
