--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -149,16 +149,26 @@
         Team: Creative Protocol 
         <br />
         <br />
-        <!-- Insert Introduction Here, see William's tab for an example --></p>
+        <p>I am a 28 year old transgender woman living in Sydney and I currently do IT support for eHealth NSW. I am an amateur musician and have learned how to learn play a new instrument every year since age 16. From the age of 18 I completed a Cert IV in Network Administration, Programming and a Diploma of Information Technology. From there I was able to secure employment in a helpdesk role, supporting the largest library of applications used by a single organisation in the southern hemisphere. I have been able to perform various roles within the same organization, moving to application support for the eMR (electronic medical records) systems used in hospitals. I now work as a senior support technician for eHealth. </p>
         <br />
         <h3>Career Plans</h3>
         <p>
-          <b><!-- Job Title Goes Here --></b>
-          <!-- Job Description Goes Here -->
+          <b>Jessica Delgado - IT Program Manager </b>
+          <br />
+          IT project managers oversee and direct the activities of information technology projects, including managing personnel, overseeing budgets and schedules, and executing a project communication plan. Career Steps to Follow to become an IT project manager : 
           <ol>
-            <li></li>
+            <li>    IT project managers must possess at least a bachelor's degree in computer science, information technology or IT project management. The courses in this program covers topics like Database management systems, IT security, Management information systems, Project procurement management and Principles of project management. </li>
             <br />
-          </ol>
+            <li>    Complete an internship. An internship allows students to interact with experienced IT project managers and complete some of the same tasks they will perform when working in the field. This experience and these networking opportunities may make it easier to find a position in IT project management immediately after graduation.  </li>
+            <br />
+            <li>    Most computer and information systems managers have several years of work experience in the field of information technology. Employers often seek candidates who not only possess a bachelor's degree, but who also have experience working in project management or supervising individuals in an information technology department.  </li>
+            <br />
+            <li>    After 3-5 years of experience working in an area related to IT project management, many individuals may be able to advance in their careers. IT project managers oversee IT projects by planning the project and managing staff.  </li>
+            <br />
+            <li>   To improve employment prospects, consider earning a master's degree.  </li>
+            <br />
+            <li>     With enough management experience, IT project managers can advance and become chief technology officers or even chief executives. </li>
+        </ol>
         </p>
       </div>
       <!-- For William -->
