--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -236,15 +236,23 @@
         Team: Creative Protocol 
         <br />
         <br />
-        <!-- Insert Introduction Here, see William's tab for an example --></p>
+       <p>I am a 35-year-old father of 2, who works full time for a hotel chain where I see to all their IT needs. I was born in Bundaberg, Queensland and, as a young boy, moved to Central West Queensland where I grew up. I currently live in Johannesburg, South Africa. I completed my school career at Barcaldine State School at the end of Grade 11, when I left to pursue a career in IT, as a trainee position opened up at the Department of Main Roads, this is also where I studied my Cert 2 in IT through Tafe. My personal interests are gaming, travel, golf, cricket, and rugby league. I have always had a keen interest in all things tech and like to keep up with what is happening in the world of Technology, both regarding hardware and software. I have always enjoyed understanding how things work, whether it was taking apart an old computer or looking at the source code of how a website was built. My experience in IT include 7 years at The Department of Main Roads following my initial traineeship in their IT department and 6 years as an IT Administrator for a Hotel chain. </p>
         <br />
         <h3>Career Plans</h3>
         <p>
-          <b><!-- Job Title Goes Here --></b>
-          <!-- Job Description Goes Here -->
+          <b>Matthew McCracken - OT Network Security Administrator </b>
+          <br />
+          A Network Security Administrator identifies what type of computer network an organization needs. They install network hardware and software programs, monitor networks, collect data to analyse a network's operation, and train individuals on how to use the network. A good career plan to become a Network Security Administrator is :  
           <ol>
-            <li></li>
+            <li>    Obtain a Bachelor’s Degree, this is the traditional minimum degree preferred by prospective employers. A Bachelor’s Degree exposes students to a broader curriculum that provides a foundation in mathematics and computer science. Students also develop a comprehensive understanding of programming, software architecture, and software testing. In addition to a Batchelor’s Degree, they can also take specialized courses in application areas, such as Network security, Information technology diagnostics, Network design and Network communications </li>
             <br />
+            <li>    To improve the chances of getting employment, an internship can be helpful. An internship can allow hands-on experience working with computer networks and also give you the opportunity to network with other professionals in the field. This experience and the networking opportunities may make it easier to find employment after graduation.  </li>
+            <br />
+            <li>     Obtain a job and work in the system administrator position to gain the necessary employment in order to work your way up to Network Security Administrator. Security Administrators may backup data contained on an organization's computer network, implement network security measures, monitor network performance, and discuss how to resolve network problems with workers who use the network. </li>
+            <br />
+            <li>    Earning professional certification demonstrates an individual's proficiency in managing specific computer network systems. Many companies prefer certifications, so this will open the door to more job opportunities. Industry companies, such as Cisco and CompTIA, offer certifications to network managers. These certifications, which include the Cisco Certified Network Professional and CompTIA Network+ certification, usually require passing an exam.   </li>
+            <br />
+            <li>     It is also important to maintain technical skills. The hardware and software programs and computer systems used in network technology and management are constantly changing. Network Security Administrators can remain competitive by staying abreast of the latest technology. </li>
           </ol>
         </p>
       </div>
